unpackaged/main/default/objects/Account/fields/Students_Pell_Grant__c.field-meta.xml
<CustomField>
    <fullName>Students_Pell_Grant__c</fullName>
    <formula>Pell_Grant_Recipients__c /   Approximate_Enrollment__c</formula>
    <inlineHelpText>Calculates % of students that receive Pell Grants.</inlineHelpText>
    <label>% Students Pell Grant</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>