unpackaged/main/default/objects/Account/fields/Students_Previous_Year__c.field-meta.xml
<CustomField>
    <fullName>Students_Previous_Year__c</fullName>
    <inlineHelpText>Students last year (school year).</inlineHelpText>
    <label>Students Previous Year</label>
    <summarizedField>Opportunity.Yearly_Students__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.Base_Year__c</field>
        <operation>equals</operation>
        <value>2021</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.IsWon</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>