unpackaged/main/default/objects/Account/fields/Students_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Students_To_Date__c</fullName>
    <formula>Students_Current_Year__c +
 Students_Past_Years__c +
 Students_Previous_Year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Students For everything but future</inlineHelpText>
    <label>Students To Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>