unpackaged/main/default/objects/Account/fields/Testimonial_Name__c.field-meta.xml
<CustomField>
    <fullName>Testimonial_Name__c</fullName>
    <label>Testimonial From</label>
    <length>255</length>
    <type>Text</type>
</CustomField>