unpackaged/main/default/objects/Account/fields/Testimonial_Position__c.field-meta.xml
<CustomField>
    <fullName>Testimonial_Position__c</fullName>
    <label>Testimonial Position</label>
    <length>255</length>
    <type>Text</type>
</CustomField>