unpackaged/main/default/objects/Account/fields/testing__c.field-meta.xml
<CustomField>
    <fullName>testing__c</fullName>
    <formula>All_Time_Savings2__c =  
 Savings_Next_Year__c + 
 Savings_Current_Year__c +
 Savings_Previous_Year__c +
 Savings_Past_Years__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>testing</label>
    <type>Checkbox</type>
</CustomField>