unpackaged/main/default/objects/Account/fields/Texas_Higher_Ed__c.field-meta.xml
<CustomField>
    <fullName>Texas_Higher_Ed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Texas Higher Ed</label>
    <type>Checkbox</type>
</CustomField>