unpackaged/main/default/objects/Account/fields/Total_School_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Total_School_Enrollment__c</fullName>
    <inlineHelpText>Number of students based on https://www.cappex.com/</inlineHelpText>
    <label>Total School Enrollment</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>