unpackaged/main/default/objects/Account/fields/Tutor_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Tutor_Competitor__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this partner a tutor competitor</inlineHelpText>
    <label>Tutor Competitor</label>
    <type>Checkbox</type>
</CustomField>