unpackaged/main/default/objects/Account/fields/Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>Unique_ID__c</fullName>
    <label>Unique ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>