unpackaged/main/default/objects/Account/fields/Usability_design_orients_users__c.field-meta.xml
<CustomField>
    <fullName>Usability_design_orients_users__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Usability design orients users</label>
    <type>Checkbox</type>
</CustomField>