unpackaged/main/default/objects/Account/fields/Usability_glossary__c.field-meta.xml
<CustomField>
    <fullName>Usability_glossary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Usability glossary</label>
    <type>Checkbox</type>
</CustomField>