unpackaged/main/default/objects/Account/fields/Usability_partial_progress__c.field-meta.xml
<CustomField>
    <fullName>Usability_partial_progress__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Usability partial progress</label>
    <type>Checkbox</type>
</CustomField>