unpackaged/main/default/objects/Account/fields/Verified_by_instructors__c.field-meta.xml
<CustomField>
    <fullName>Verified_by_instructors__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partner Verified by instructors</label>
    <type>Checkbox</type>
</CustomField>