unpackaged/main/default/objects/Account/fields/X2_4_year_colleges_or_universities__c.field-meta.xml
<CustomField>
    <fullName>X2_4_year_colleges_or_universities__c</fullName>
    <description>2 year colleges or 4 year universites/colleges</description>
    <formula>IF(
OR(
ISPICKVAL( Type , "Technical/Community College (2)") ,
ISPICKVAL( Type ,"College/University (4)")),
True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>2/4 year colleges or universities</label>
    <type>Checkbox</type>
</CustomField>