unpackaged/main/default/objects/Account/fields/X2_and_4_year_marketshare__c.field-meta.xml
<CustomField>
    <fullName>X2_and_4_year_marketshare__c</fullName>
    <formula>IF(  
AND( X2_4_year_colleges_or_universities__c = TRUE, Exclude__c = FALSE, BillingCountry = "United States",
Students_Current_Year__c &gt; 0),

1/4583,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>2 and 4 year marketshare</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>