unpackaged/main/default/objects/Account/fields/X4_Year_College_Market_Share__c.field-meta.xml
<CustomField>
    <fullName>X4_Year_College_Market_Share__c</fullName>
    <formula>IF(
   AND(
       TEXT(Type) = "College/University (4)",
       BillingCountry = "United States",
 Exclude__c = False,
 Students_Current_Year__c &gt; 0)
      
          , 
   
   1/3004, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>For calculating market share</inlineHelpText>
    <label>4 Year College Market Share</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>