unpackaged/main/default/objects/Account/recordTypes/General.recordType-meta.xml
<RecordType>
    <fullName>General</fullName>
    <active>true</active>
    <description>Service Companies, other Organizations</description>
    <label>General</label>
</RecordType>