unpackaged/main/default/objects/Account/recordTypes/School.recordType-meta.xml
<RecordType>
    <fullName>School</fullName>
    <active>true</active>
    <description>Colleges, Universities, High Schools</description>
    <label>School</label>
</RecordType>