unpackaged/main/default/objects/Account/recordTypes/School_District.recordType-meta.xml
<RecordType>
    <fullName>School_District</fullName>
    <active>true</active>
    <label>School District</label>
</RecordType>