unpackaged/main/default/objects/Account/validationRules/Address_must_be_added.validationRule-meta.xml
<ValidationRule>
    <fullName>Address_must_be_added</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
RecordTypeId = '012U0000000MdzIIAS',
 ISBLANK( BillingCountry ) 
)</errorConditionFormula>
    <errorMessage>Please Ente Billing Country</errorMessage>
</ValidationRule>