unpackaged/main/default/objects/Account/validationRules/Child_Partners_must_have_Parent.validationRule-meta.xml
<ValidationRule>
    <fullName>Child_Partners_must_have_Parent</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL(Type, "Child") ,  ISBLANK( ParentId ) )</errorConditionFormula>
    <errorMessage>If child, then you have to assign a parent.</errorMessage>
</ValidationRule>