unpackaged/main/default/objects/Account/validationRules/No_Commas.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Commas</fullName>
    <active>true</active>
    <errorConditionFormula>CONTAINS( Email_for_Leads__c , ",")</errorConditionFormula>
    <errorDisplayField>Email_for_Leads__c</errorDisplayField>
    <errorMessage>Don't use a comma, use a semicolon.</errorMessage>
</ValidationRule>