unpackaged/main/default/objects/Account/listViews/All_Partners.listView-meta.xml
<ListView>
    <fullName>All_Partners</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.INDUSTRY</columns>
    <columns>Books_Offered__c</columns>
    <columns>Lead_Sharing__c</columns>
    <columns>Tutor_Competitor__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Partner</value>
    </filters>
    <label>All Partners</label>
    <language>en_US</language>
</ListView>