unpackaged/main/default/objects/Account/listViews/All_Schools.listView-meta.xml
<ListView>
    <fullName>All_Schools</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.School</value>
    </filters>
    <filters>
        <field>Exclude__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All Schools</label>
</ListView>