unpackaged/main/default/objects/Account/listViews/All_Schools_without_Country.listView-meta.xml
<ListView>
    <fullName>All_Schools_without_Country</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.School</value>
    </filters>
    <filters>
        <field>ACCOUNT.ADDRESS1_COUNTRY_CODE</field>
        <operation>equals</operation>
    </filters>
    <label>All Schools without Country</label>
</ListView>