unpackaged/main/default/objects/Account/listViews/Sharing_Partners.listView-meta.xml
<ListView>
    <fullName>Sharing_Partners</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.INDUSTRY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Partner</value>
    </filters>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Faculty Course Service</value>
    </filters>
    <label>Sharing Partners</label>
</ListView>