unpackaged/main/default/objects/Account/listViews/University_or_College.listView-meta.xml
<ListView>
    <fullName>University_or_College</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.URL</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>ACCOUNT.ADDRESS1_STREET</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>ACCOUNT.ADDRESS1_ZIP</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>ACCOUNT.LAST_ACTIVITY</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>ACCOUNT.URL</field>
        <operation>equals</operation>
    </filters>
    <label>University or College</label>
</ListView>